# haskell-stats

./: .gitignore  LICENSE  README.md  haskell-stack.cabal  haskell-stats.cabal
src/: CabalParser.hs  ModuleParser.hs  Scraper.hs  Types.hs  Utils.hs
