name:                haskell-stats
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/aesadde/haskell-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Sadde
maintainer:          albertosadde@gmail.com
copyright:           2016 Alberto Sadde
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.7 && < 5
                     , text
                     , Cabal
                     , binary
                     , deepseq
                     , containers
                     , stack
                     , path
                     , HTTP
                     , haskell-src-exts
                     , ghc
                     , ghc-paths
                     , filepath
                     , directory
                     , transformers
                     , hashable
                     , unordered-containers
                     , acid-state
                     , safecopy
                     , mtl
                     , cereal
                     , temporary
                     , filemanip
                     , cpphs
                     , monad-loops
                     , tagsoup
                     , random
                     , extra
                     , vector

  default-language:    Haskell2010

executable haskell-stack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-stack
  default-language:    Haskell2010

test-suite haskell-stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-stack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aesadde/haskell-stack
